<resources>
    <string name="app_name">BMI</string>
    <string name="weight_text_view">Weight</string>
    <string name="edit_text_hint">00</string>
    <string name="cm_text">cm</string>
    <string name="height_text_view">Height</string>
    <string name="kg_text_view">Kg</string>
    <string name="btn_text">CALCULATE</string>
    <string name="total_text_view">00</string>
    <string name="rating_text_view">Healthy</string>
    <string name="range_text_view">range</string>
</resources>