<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/medium_gap"
    tools:context=".MainActivity">


    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/medium_gap"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/small_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_text_view"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/small_gap">

                <EditText
                    android:id="@+id/weight_edit_text"
                    android:layout_width="250dp"
                    android:layout_height="75dp"
                    android:hint="@string/edit_text_hint"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kg_text_view"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/small_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_text_view"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/small_gap">

                <EditText
                    android:id="@+id/height_edit_text"
                    android:layout_width="250dp"
                    android:layout_height="75dp"
                    android:hint="@string/edit_text_hint"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cm_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:backgroundTint="@color/btn_background"
        android:text="@string/btn_text"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/small_gap">

       <LinearLayout
           android:paddingTop="@dimen/medium_gap"
           android:paddingBottom="@dimen/medium_gap"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_gravity="center">

           <TextView
               android:id="@+id/total_text_view"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/total_text_view"
               android:textSize="@dimen/text_size"
               android:gravity="center"
               android:textColor="@color/white"/>
           <TextView
               android:id="@+id/rating_text_view"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/rating_text_view"
               android:gravity="center"
               android:textColor="@color/normal_weight"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/range_text_view"
               android:gravity="center"
               android:textColor="@color/text_hint"
               android:paddingBottom="@dimen/small_gap"/>

       </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>